Fri Jul  6 00:49:05 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/readline/readline.c (readline_event): merge from 1.7: a
	  non-void function should return a value.

	* ext/readline/readline.c: merge from 1.7: add new methods:
	  Readline::completion_append_character and
	  Readline::completion_append_character=.

	* ext/readline/README, ext/readline/README.jp: merge from 1.7: add
	  an English version of the document.

Wed Jul  4 00:12:37 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/find.rb: merge from 1.7: rescue Errno::EACCES as well.

Wed Jul  4 00:09:16 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mathn.rb: merge from 1.7: add Rational#inspect().

Wed Jul  4 00:01:36 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb: distclean should remove mkmf.log as well.

Mon Jul  2 09:53:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval_string_wrap): extend new ruby_top_self, not
	  original self.

	* eval.c (rb_eval_cmd): respect ruby_wrapper if set.

	* eval.c (eval): do not update ruby_class unless scope is not
	  provided.

Sun Jul  1 10:51:15 2001  Shugo Maeda <shugo@ruby-lang.org>

	* eval.c (eval): preserve wrapper information.

	* eval.c (proc_invoke): ditto.

	* eval.c (block_pass): ditto.

Sat Jun 30 02:55:45 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (void_expr): too much warnings for void context
	  (e.g. foo[1] that can be mere Proc call).

Fri Jun 29 15:29:31 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lex.c (rb_reserved_word): lex_state after tRESCUE should be
	  EXPR_MID.

Thu Jun 28 00:36:19 2001 Keiju Ishitsuka <keiju@ishitsuka.com>
	
	* lib/matrix.rb: resolve 'ruby -w' warnings.

	* lib/irb/locale.rb: resolve 'ruby -w' warnings.

	* lib/irb/multi-irb.rb: resolve 'ruby -w' warnings.

	* lib/irb/ruby-lex.rb: fix problem for "\\M-\\..." and "\\C-\\..."
	  and resolve 'ruby -w' warnings.  

	* lib/irb/ruby-token.rb: fix typo

	* lib/shell/command-processor.rb: resolve 'ruby -w' warnings.
	